Allow to run powermock on JDK11 and upgrade Mockito to 3.8.0